# osiro-llm

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_llm_debugging.ipynb  02_model_comparison.ipynb
osiro_llm/evaluation/: evaluator.py  metrics.py
osiro_llm/llm/: google.py  prompts.py
osiro_llm/recommenders/: base.py  baseline_popularity.py  baseline_random.py  baseline_user_based_cf.py  llm_reranker.py  llm_zero_shot.py
