[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osiro-llm"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = []

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["osiro_llm*"]
exclude = ["tests*", "notebooks*", ".venv*"]
